--- a/.prismaCloud/config.yml
+++ b/.prismaCloud/config.yml
@@ -3,7 +3,7 @@
 # - For AWS CloudFormation: CFT
 # - For Kubernetes: K8S
 				
-template-type: TF
+template_type:TF
 
 # The valid values for terraform_version are 0.11 or 0.12
 				
