--- a/.prismaCloud/config.yml
+++ b/.prismaCloud/config.yml
@@ -1,18 +1,2 @@
-# Specify the template type. Valid values are as follows.
-# - For Terraform: TF
-# - For AWS CloudFormation: CFT
-# - For Kubernetes: K8S
-				
-template_type: K8S
-
-# The valid values for terraform_version are 0.11 or 0.12
-
-
-# If terraform_version is 0.11, then terraform_011_parameters 
-# is required.
-# The value for variable_files is an array of custom variable file
-# names. The path of each file is relative to your repository
-# branch root directory 
-# The value for variable_values is an array of name/value pairs 
-# that identify the input variables your template uses.
-				
+template_type: TF
+terraform_version: 0.11
